Implemented abstract General Solver

--- a/src/main/java/gui/MainFrame.form
+++ b/src/main/java/gui/MainFrame.form
@@ -203,6 +203,9 @@
               <Dimension value="[350, 400]"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JLayeredPane.layer" type="java.lang.Integer" value="300"/>
+          </AuxValues>
 
           <Layout>
             <DimensionLayout dim="0">
@@ -302,7 +305,6 @@
           </Properties>
           <Events>
             <EventHandler event="mouseDragged" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jMainPanelMouseDragged"/>
-            <EventHandler event="mouseWheelMoved" listener="java.awt.event.MouseWheelListener" parameters="java.awt.event.MouseWheelEvent" handler="jMainPanelMouseWheelMoved"/>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMainPanelMouseClicked"/>
           </Events>
 
